public class Main {
    public static void main(String[] args) {
        Game game = new Game();
        game.showModeSelection(); // Display the mode selection GUI
    }
}