package src.ChessBoard;

public interface ChessBoardFactory {
    ChessBoard createChessBoard();
}